--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-    "name": "p5-reddit-clone",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node index.js"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "body-parser": "^1.17.1",
-        "express": "^4.15.2",
-        "express-handlebars": "^3.0.0",
-        "morgan": "^1.8.1"
-    }
+  "name": "p5-reddit-clone",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "dotenv": "^7.0.0",
+    "express": "^4.15.2",
+    "express-handlebars": "^3.0.0",
+    "moment": "^2.24.0",
+    "mongoose": "^5.5.4",
+    "morgan": "^1.8.1"
+  }
 }
