--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "express-handlebars": "^3.0.0",
     "moment": "^2.24.0",
     "mongoose": "^5.5.4",
-    "morgan": "^1.8.1"
+    "morgan": "^1.8.1",
+    "bootstrap": "^4.3.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "^1.9.1"
   }
 }
