--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.3.1",
     "dotenv": "^7.0.0",
     "express": "^4.15.2",
     "express-handlebars": "^3.0.0",
+    "font-awesome": "^4.7.0",
+    "jquery": "^1.9.1",
     "moment": "^2.24.0",
     "mongoose": "^5.5.4",
     "morgan": "^1.8.1",
-    "bootstrap": "^4.3.1",
-    "font-awesome": "^4.7.0",
-    "jquery": "^1.9.1"
+    "socket.io": "^2.2.0"
   }
 }
